[package]
name = "raystack_core"
version = "0.2.0"
authors = ["A Mackay <opensauceburner@outlook.com"]
edition = "2018"
description = "Core functionality and types for SkySpark / Project Haystack"
keywords = ["skyspark", "haystack"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1.0"