[package]
name = "raystack_core"
version = "0.4.0"
authors = ["A Mackay <opensauceburner@outlook.com"]
edition = "2018"
description = "Core functionality and types for SkySpark / Project Haystack"
keywords = ["skyspark", "haystack"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde_json"]

[dependencies]
regex = "1"
serde_json = { version = "1", optional = true}
thiserror = "1.0"