[package]
name = "raystack_core"
version = "0.5.0"
authors = ["A Mackay <opensauceburner@outlook.com"]
edition = "2018"
description = "Core functionality and types for SkySpark / Project Haystack"
keywords = ["skyspark", "haystack"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde_json"] # enables functions to serialize/deserialize to Hayson (https://github.com/j2inn/hayson)

[dependencies]
regex = "1"
serde_json = { version = "1", optional = true}
thiserror = "1.0"